Bug 692832: Drop setcachedevice calls with large arguments.

Reject setcachedevice arguments that are too big and, probably, invalid.
The threshold, 32000, is arbitrary. Normal fonts have the values about 1000.